// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sidenav Component > should match snapshot 1`] = `
<div>
  <div
    class="relative flex flex-col p-2 h-full justify-between bg-gray-1 border-r border-gray-10 transition-all duration-300 w-64"
  >
    <div
      class="flex flex-col"
    >
      <div
        class="flex flex-row justify-between w-full p-5 "
      >
        <div
          class="flex flex-row gap-2 items-center"
        >
          <img
            alt="Mail"
            src="https://example.com/logo.png"
            width="28"
          />
          <p
            class="text-xl font-medium text-gray-100"
          >
            Mail
          </p>
        </div>
        <button>
          <svg
            class="text-gray-50 active:text-gray-70"
            fill="currentColor"
            height="28"
            viewBox="0 0 256 256"
            width="28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M72,60A12,12,0,1,1,60,48,12,12,0,0,1,72,60Zm56-12a12,12,0,1,0,12,12A12,12,0,0,0,128,48Zm68,24a12,12,0,1,0-12-12A12,12,0,0,0,196,72ZM60,116a12,12,0,1,0,12,12A12,12,0,0,0,60,116Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,128,116Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,196,116ZM60,184a12,12,0,1,0,12,12A12,12,0,0,0,60,184Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,128,184Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,196,184Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="flex flex-col w-full"
        >
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg bg-primary/20 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-primary"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Inbox
                </p>
              </div>
              <div
                class="flex rounded-full px-1.5 py-0.5 bg-primary"
              >
                <p
                  class="text-white text-xs font-medium"
                >
                  5
                </p>
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Sent
                </p>
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Drafts
                </p>
              </div>
              <div
                class="flex rounded-full px-1.5 py-0.5 bg-gray-40"
              >
                <p
                  class="text-white text-xs font-medium"
                >
                  2
                </p>
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Labels
                </p>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sidenav Component > should match snapshot when collapsed 1`] = `
<div>
  <div
    class="relative flex flex-col p-2 h-full justify-between bg-gray-1 border-r border-gray-10 transition-all duration-300 w-16"
  >
    <button
      class="absolute top-1/2 -right-3 -translate-y-1/2 flex items-center justify-center w-6 h-6 rounded-full bg-surface border border-gray-10 text-gray-50 hover:text-gray-70 hover:bg-gray-5 shadow-sm z-10"
    >
      <svg
        fill="currentColor"
        height="14"
        viewBox="0 0 256 256"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
        />
      </svg>
    </button>
    <div
      class="flex flex-col"
    >
      <div
        class="flex flex-row justify-between w-full p-5 px-2 justify-center"
      >
        <div
          class="flex flex-row gap-2 items-center"
        >
          <img
            alt="Mail"
            src="https://example.com/logo.png"
            width="28"
          />
        </div>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="flex flex-col w-full"
        >
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg bg-primary/20 "
            title="Inbox"
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-center"
            >
              <div
                class="flex flex-row gap-3 items-center text-primary"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
            title="Sent"
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-center"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
            title="Drafts"
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-center"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
            title="Labels"
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-center"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sidenav Component > should match snapshot with primary action 1`] = `
<div>
  <div
    class="relative flex flex-col p-2 h-full justify-between bg-gray-1 border-r border-gray-10 transition-all duration-300 w-64"
  >
    <div
      class="flex flex-col"
    >
      <div
        class="flex flex-row justify-between w-full p-5 "
      >
        <div
          class="flex flex-row gap-2 items-center"
        >
          <img
            alt="Mail"
            src="https://example.com/logo.png"
            width="28"
          />
          <p
            class="text-xl font-medium text-gray-100"
          >
            Mail
          </p>
        </div>
        <button>
          <svg
            class="text-gray-50 active:text-gray-70"
            fill="currentColor"
            height="28"
            viewBox="0 0 256 256"
            width="28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M72,60A12,12,0,1,1,60,48,12,12,0,0,1,72,60Zm56-12a12,12,0,1,0,12,12A12,12,0,0,0,128,48Zm68,24a12,12,0,1,0-12-12A12,12,0,0,0,196,72ZM60,116a12,12,0,1,0,12,12A12,12,0,0,0,60,116Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,128,116Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,196,116ZM60,184a12,12,0,1,0,12,12A12,12,0,0,0,60,184Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,128,184Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,196,184Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <button
          data-testid="primary-action"
        >
          New message
        </button>
        <div
          class="flex flex-col w-full"
        >
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg bg-primary/20 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-primary"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Inbox
                </p>
              </div>
              <div
                class="flex rounded-full px-1.5 py-0.5 bg-primary"
              >
                <p
                  class="text-white text-xs font-medium"
                >
                  5
                </p>
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Sent
                </p>
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Drafts
                </p>
              </div>
              <div
                class="flex rounded-full px-1.5 py-0.5 bg-gray-40"
              >
                <p
                  class="text-white text-xs font-medium"
                >
                  2
                </p>
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Labels
                </p>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sidenav Component > should match snapshot with storage 1`] = `
<div>
  <div
    class="relative flex flex-col p-2 h-full justify-between bg-gray-1 border-r border-gray-10 transition-all duration-300 w-64"
  >
    <div
      class="flex flex-col"
    >
      <div
        class="flex flex-row justify-between w-full p-5 "
      >
        <div
          class="flex flex-row gap-2 items-center"
        >
          <img
            alt="Mail"
            src="https://example.com/logo.png"
            width="28"
          />
          <p
            class="text-xl font-medium text-gray-100"
          >
            Mail
          </p>
        </div>
        <button>
          <svg
            class="text-gray-50 active:text-gray-70"
            fill="currentColor"
            height="28"
            viewBox="0 0 256 256"
            width="28"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M72,60A12,12,0,1,1,60,48,12,12,0,0,1,72,60Zm56-12a12,12,0,1,0,12,12A12,12,0,0,0,128,48Zm68,24a12,12,0,1,0-12-12A12,12,0,0,0,196,72ZM60,116a12,12,0,1,0,12,12A12,12,0,0,0,60,116Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,128,116Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,196,116ZM60,184a12,12,0,1,0,12,12A12,12,0,0,0,60,184Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,128,184Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,196,184Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="flex flex-col w-full"
        >
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg bg-primary/20 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-primary"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Inbox
                </p>
              </div>
              <div
                class="flex rounded-full px-1.5 py-0.5 bg-primary"
              >
                <p
                  class="text-white text-xs font-medium"
                >
                  5
                </p>
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Sent
                </p>
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Drafts
                </p>
              </div>
              <div
                class="flex rounded-full px-1.5 py-0.5 bg-gray-40"
              >
                <p
                  class="text-white text-xs font-medium"
                >
                  2
                </p>
              </div>
            </div>
          </button>
          <button
            class="flex w-full flex-col focus-visible:bg-gray-10 rounded-lg hover:bg-gray-5 "
          >
            <div
              class="flex flex-row px-2.5 py-2 w-full items-center justify-between"
            >
              <div
                class="flex flex-row gap-3 items-center text-gray-60"
              >
                <svg
                  data-testid="mock-icon"
                  height="20"
                  width="20"
                />
                <p>
                  Labels
                </p>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col w-full gap-2.5"
    >
      <div
        class="flex flex-row w-full justify-between"
      >
        <div
          class="flex flex-row items-center gap-2"
        >
          <p
            class="text-gray-60 text-sm font-semibold"
          >
            2.8 GB
          </p>
          <p
            class="text-gray-60 text-sm"
          >
            /
          </p>
          <p
            class="text-gray-60 text-sm"
          >
            4 GB
          </p>
        </div>
        <button
          class="text-primary text-sm hover:text-primary-dark font-semibold"
        >
          Upgrade
        </button>
      </div>
      <div
        class="flex w-full h-1.5 bg-gray-10 rounded-full"
      >
        <div
          class="bg-gray-60 rounded-full"
          style="width: 70%;"
        />
      </div>
    </div>
  </div>
</div>
`;
